<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/whipser_publish_transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:gravity="center"
        android:textColor="@color/whipser_publish_white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:background="@drawable/whipser_publish_shape_round_corner"
        android:gravity="center"
        android:text="@string/activity_whisper_album"
        android:textColor="#2E8EF5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_take"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:layout_marginTop="5dp"
        android:background="@drawable/whipser_publish_shape_round_corner"
        android:gravity="center"
        android:text="@string/activity_whisper_take"
        android:textColor="#2E8EF5"
        android:textSize="20sp"
         />
    
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:layout_marginTop="5dp"
        android:background="@drawable/whipser_publish_shape_round_corner"
        android:gravity="center"
        android:text="@string/whipser_publish_cancel"
        android:textColor="#2E8EF5"
        android:textSize="20sp"
        android:layout_marginBottom="5dp" />

</LinearLayout>