<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whipser_img_publish_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whipser_publish_black"
    tools:context=".WhisperPhotoActivity">

    <RelativeLayout
        android:id="@+id/whisper_img_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/whisper_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/whisper_img_process_loading_bar"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <EditText
            android:id="@+id/whisper_img_cover_text_edit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/whipser_publish_shape_round_corner"
            android:clickable="true"
            android:gravity="top"
            android:hint="@string/activity_whisper_hint"
            android:maxLength="80"
            android:minHeight="120dp"
            android:padding="7dp"
            android:textColorHint="#c8c8c8"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/whisper_img_cover_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left"
            android:maxLength="80"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="@color/whipser_publish_white"
            android:textSize="25sp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/whisper_publish_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/whipser_publish_top_bar_height"
        android:background="@color/whipser_publish_white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/whisper_publish_back_text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/whipser_publish_top_bar_common_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/activity_whisper_adjust"
            android:textColor="@color/whipser_publish_black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/whisper_publish_submit_text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/whipser_publish_top_bar_common_submit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/whisper_publish_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/whipser_publish_white"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/whisper_publish_change_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="7dp"
                android:src="@drawable/whipser_publish_yoyo_filter_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:text="@string/activity_whisper_album"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#8c8c8c" />

        <LinearLayout
            android:id="@+id/whisper_publish_change_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whipser_publish_white"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="7dp"
                android:src="@drawable/whipser_publish_yoyo_font_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:text="@string/activity_whisper_typeface"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>